--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,12 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
 }
 
@@ -195,21 +200,27 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu .active,
+.nav-menu li:hover > a {
   color: #fff;
   background: #874d59;
 }
 
-.nav-menu a:hover span, .nav-menu .active span, .nav-menu li:hover > a span {
+.nav-menu a:hover span,
+.nav-menu .active span,
+.nav-menu li:hover > a span {
   color: #fff;
 }
 
-.nav-menu a:hover, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu li:hover > a {
   width: 100%;
   color: #fff;
 }
 
-.nav-menu a:hover span, .nav-menu li:hover > a span {
+.nav-menu a:hover span,
+.nav-menu li:hover > a span {
   display: block;
 }
 
@@ -376,7 +387,7 @@ section {
 }
 
 .section-title h2::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 120px;
@@ -387,7 +398,7 @@ section {
 }
 
 .section-title h2::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 40px;
@@ -510,7 +521,7 @@ section {
 .skills .progress-bar {
   width: 1px;
   height: 10px;
-  transition: .9s;
+  transition: 0.9s;
   background-color: #874d59;
 }
 
@@ -525,6 +536,13 @@ section {
   color: #493441;
 }
 
+.resume .img-circle {
+  border-radius: 50%;
+  width: 30px; /* adjust this value to change the size of the circle */
+  height: 30px; /* adjust this value to change the size of the circle */
+  margin-right: 5px;
+}
+
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
@@ -532,19 +550,37 @@ section {
   position: relative;
 }
 
-.resume .resume-item h4 {
-  line-height: 18px;
-  font-size: 18px;
+.resume .resume-item highlight {
   font-weight: 600;
-  text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  color: #111;
+}
+
+.resume .resume-item h3 {
+  font-size: 20px;
   color: #874d59;
+  line-height: 18px;
+  font-weight: 600;
+}
+
+.resume .resume-item h4 {
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 10px;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f7f8f9;
+  /* background: #f7f8f9; */
+  padding: 5px 15px;
+  /* display: inline-block; */
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.resume .resume-item h6 {
+  font-size: 14px;
+  color: #f7f8f9;
+  background: #874d59;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -578,8 +614,23 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+
+.portfolio .new {
+  /* background: #6b3333; */
+  background-color: #fff7f5;
+  padding: 40px;
+}
+
+.portfolio .new2 {
+  padding-right: 30px;
+}
+
+.portfolio .new3 {
+  padding: 10px;
+}
+
 .portfolio .portfolio-item {
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .portfolio #portfolio-flters {
@@ -605,7 +656,8 @@ section {
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+.portfolio #portfolio-flters li:hover,
+.portfolio #portfolio-flters li.filter-active {
   color: #874d59;
 }
 
@@ -735,7 +787,7 @@ section {
 # Portfolio Details
 --------------------------------------------------------------*/
 .portfolio-details {
-  padding-top: 40px;
+  /* padding: 40px; */
 }
 
 .portfolio-details .portfolio-details-slider img {
@@ -747,7 +799,10 @@ section {
   position: relative;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: #fff;
@@ -755,7 +810,10 @@ section {
   border: 1px solid #874d59;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet-active {
   background-color: #874d59;
 }
 
@@ -984,7 +1042,8 @@ section {
   margin: 0 0 15px 0;
 }
 
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
   color: #90c8fc;
   font-size: 26px;
 }
@@ -1044,7 +1103,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
-  background: #FAF0F3;
+  background: #faf0f3;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1067,11 +1126,14 @@ section {
   color: #728394;
 }
 
-.contact .info .email, .contact .info .phone {
+.contact .info .email,
+.contact .info .phone {
   margin-top: 40px;
 }
 
-.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
+.contact .info .email:hover i,
+.contact .info .address:hover i,
+.contact .info .phone:hover i {
   background: #874d59;
   color: #fff;
 }
@@ -1127,7 +1189,8 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input, .contact .php-email-form textarea {
+.contact .php-email-form input,
+.contact .php-email-form textarea {
   border-radius: 4px;
   box-shadow: none;
   font-size: 14px;
@@ -1154,7 +1217,7 @@ section {
   background: #ab3557;
 }
 
-.contact .php-email-form #test{
+.contact .php-email-form #test {
   background: #874d59;
   border: 0;
   padding: 10px 35px;
