--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,38 @@ h6 {
   letter-spacing: 1px;
 }
 
+.resume-button {
+  /* display: block; */
+  background: #874d59;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: fit-content;
+  /* position: relative; */
+  text-align: center;
+}
+
+.resume-button a:hover {
+  background: #86777a;
+}
+
+.social-links {
+  margin-top: 30px;
+}
+
+.social-links a {
+  font-size: 24px;
+  display: inline-block;
+  color: #493441;
+  line-height: 1;
+  margin-right: 20px;
+  transition: 0.3s;
+}
+
+.social-links a:hover {
+  color: #874d59;
+}
+
 #hero .social-links {
   margin-top: 30px;
 }
