--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,19 +331,32 @@ h6 {
   letter-spacing: 1px;
 }
 
+.ghc {
+  margin-bottom: 50px;
+}
+
 .resume-button {
   /* display: block; */
   background: #874d59;
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  border-radius: 50px;
+  padding: 5px 20px;
+  margin: 10px 0px;
+  margin-bottom: 20px;
   width: fit-content;
-  /* position: relative; */
   text-align: center;
+  color: #fff7f5;
+  /* 874d59 */
+  /* font-size: 15px; */
 }
 
-.resume-button a:hover {
-  background: #86777a;
+.resume-button a {
+  color: #fff7f5;
+  /* color: #5e5b60; */
+  font-size: 15px;
+}
+
+.resume-button:hover {
+  background-color: #493441;
 }
 
 .social-links {
