--- a/test/style.css
+++ b/test/style.css
@@ -6,7 +6,11 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-image: linear-gradient(rgba(255, 225, 168, 0.849), rgba(255, 225, 168, 0.849)), url("assets/background.jpg");
+  background-image: linear-gradient(
+      rgba(255, 225, 168, 0.849),
+      rgba(255, 225, 168, 0.849)
+    ),
+    url("assets/background.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -30,11 +34,13 @@ body {
   border: 5px solid #8b7355;
   border-style: groove;
   border-radius: 4px;
-  background: linear-gradient(135deg, rgba(113, 82, 15, 0.269) 0%, rgba(255, 174, 44, 0.2) 100%);
-  box-shadow: 
-    inset 0 0 8px rgba(109, 65, 15, 0.4),
-    inset 0 0 2px rgba(255, 255, 255, 0.3),
-    0 8px 16px rgba(122, 82, 17, 0.4),
+  background: linear-gradient(
+    135deg,
+    rgba(113, 82, 15, 0.269) 0%,
+    rgba(255, 174, 44, 0.2) 100%
+  );
+  box-shadow: inset 0 0 8px rgba(109, 65, 15, 0.4),
+    inset 0 0 2px rgba(255, 255, 255, 0.3), 0 8px 16px rgba(122, 82, 17, 0.4),
     0 0 1px rgba(0, 0, 0, 0.8);
   max-width: fit-content;
   flex-shrink: 0;
@@ -154,7 +160,7 @@ body {
 
 .item-image-container {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   width: 100%;
   height: 100%;
@@ -169,6 +175,7 @@ body {
   height: auto;
   object-fit: contain;
   object-position: bottom center;
+  position: relative;
   bottom: calc(100% - var(--vertical-align));
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   filter: drop-shadow(0 4px 12px rgba(188, 176, 150, 0.4))
