Add book to shelves

--- a/test/style.css
+++ b/test/style.css
@@ -508,6 +508,9 @@ body {
   z-index: 100;
 }
 
+.album-fan .album-fan-item {
+  position: absolute;
+}
 .pin-tooltip::after {
   content: "";
   position: absolute;
